[project]
name = "cfeproviral"
dynamic = ["version"]
description = "Proviral pipeline"
authors = [
    { name = "British Columbia Centre for Excellence in HIV/AIDS", email = "vmysak@bccfe.ca" },
]
requires-python = ">=3.10,<3.12"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy==2.2.6",
    "python-levenshtein==0.26.1",
    "pandas==2.3.3",
    "requests==2.32.4",
    "pyyaml==6.0.3",
    "gotoh @ git+https://github.com/cfe-lab/MiCall.git@v7.7.0#egg=gotoh&subdirectory=micall/alignment",
    "cfeintact @ git+https://github.com/cfe-lab/CFEIntact.git@v1.23.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
]

[project.scripts]
cfeproviral = "cfeproviral.__main__:entry"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
fallback_version = "0.dev0"

[tool.hatch.build]
include = [
  "cfeproviral/",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
